--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.3",
     "@nuxt/content": "^2.12.1",
     "nuxt": "^3.11.0"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxtjs/color-mode": "^3.3.3",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3",
+    "vue-tsc": "^1"
   }
 }
