--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.3",
     "@nuxt/content": "^2.12.1",
+    "animejs": "^3.2.2",
     "nuxt": "^3.11.0"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxtjs/color-mode": "^3.3.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
+    "@types/animejs": "^3.1.12",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3",
